--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-lines-ellipsis": "^0.15.4",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
