--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
+    "array-shuffle": "^3.0.0",
     "classnames": "^2.5.1",
     "next": "14.2.4",
     "react": "^18",
