--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-latex-next": "^3.0.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
