--- a/package.json
+++ b/package.json
@@ -6,27 +6,45 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@eslint/compat": "^1.1.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
     "array-shuffle": "^3.0.0",
     "classnames": "^2.5.1",
+    "D": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "14.2.4",
+    "prettier": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-latex-next": "^3.0.0",
-    "typewriter-effect": "^2.21.0"
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-math": "^6.0.0",
+    "typewriter-effect": "^2.21.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.13.1"
   }
 }
