--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
-    "format": "prettier --write ."
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@eslint/compat": "^1.1.0",
@@ -20,6 +21,7 @@
     "date-fns": "^3.6.0",
     "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
+    "husky": "^9.0.11",
     "js-yaml": "^4.1.0",
     "next": "14.2.4",
     "prettier": "^3.3.2",
