--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-latex-next": "^3.0.0",
     "react-markdown": "^9.0.1",
     "rehype-katex": "^7.0.0",
