--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
+    "format": "prettier --write . && rustywind --write .",
     "prepare": "husky"
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "rustywind": "^0.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1"
