--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "array-shuffle": "^3.0.0",
     "classnames": "^2.5.1",
+    "cmdk": "^1.0.0",
     "D": "^1.0.0",
     "date-fns": "^3.6.0",
     "eslint-config-prettier": "^9.1.0",
