feat: add dialog

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@eslint/compat": "^1.1.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "array-shuffle": "^3.0.0",
     "classnames": "^2.5.1",
-    "cmdk": "^1.0.0",
     "D": "^1.0.0",
     "date-fns": "^3.6.0",
     "eslint-config-prettier": "^9.1.0",
