--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gray-matter": "^4.0.3",
     "husky": "^9.0.11",
     "js-yaml": "^4.1.0",
+    "jsdom": "^24.1.0",
     "next": "14.2.4",
     "prettier": "^3.3.2",
     "react": "^18",
@@ -36,14 +37,18 @@
     "react-markdown": "^9.0.1",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "typewriter-effect": "^2.21.0",
+    "unified": "^11.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/eslint__js": "^8.42.3",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
