--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@types/react-show-more-text": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "array-shuffle": "^3.0.0",
     "classnames": "^2.5.1",
@@ -29,12 +33,15 @@
     "js-yaml": "^4.1.0",
     "jsdom": "^24.1.0",
     "next": "14.2.4",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "prettier": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-latex-next": "^3.0.0",
     "react-markdown": "^9.0.1",
+    "react-show-more-text": "^1.7.1",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
