--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@types/react-show-more-text": "^1.4.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "array-shuffle": "^3.0.0",
     "classnames": "^2.5.1",
@@ -42,6 +43,7 @@
     "react-latex-next": "^3.0.0",
     "react-markdown": "^9.0.1",
     "react-show-more-text": "^1.7.1",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
