--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "prettier --check . && eslint .",
+    "lint": "prettier --check . && eslint . --cache",
     "format": "prettier --write . && rustywind --write .",
     "prepare": "husky"
   },
