--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "typewriter-effect": "^2.21.0",
